Fix long titles without spaces overflowing
Spooky action at a distance?

--- a/chrome/skin/default/zotero/itemPane.css
+++ b/chrome/skin/default/zotero/itemPane.css
@@ -15,6 +15,7 @@
 .zotero-view-item-container {
 	display: flex;
 	flex-direction: row;
+	min-width: 0;
 	height: 0; /* Prevent overflow, somehow */
 }
 
@@ -22,6 +23,7 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	max-width: 100%;
 	background: var(--material-sidepane);
 	
 	/* Set a dummy transform so that position: fixed elements are positioned relative to this */
@@ -31,6 +33,7 @@
 .zotero-view-item {
 	position: relative;
 	flex: 1;
+	overflow-x: clip;
 	overflow-y: scroll;
 	padding: 0 8px;
 	overflow-anchor: none; /* Work around tags box causing scroll to jump - figure this out */
